# finance-tracker

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 690686ad226c_initial_migration.py
backend/app/: database.py  main.py
backend/app/core/: config.py
backend/app/models/: __init__.py  category.py  transaction.py  user.py
backend/tests/: smoke_test.py
docs/adr/: 0001-database-stack.md
